k8s/juicer/base/gateway-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: juicer-api-route
  namespace: dev
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - dev-dankop.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: juicer
          port: 1337
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kratos-api-route
  namespace: dev
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: dev
  hostnames:
    - dev-dankop.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kratos
      backendRefs:
        - name: kratos
          port: 4433
    - filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard-route
  namespace: dev
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: dev
  hostnames:
    - traefik.dev-dankop.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - name: traefik
          port: 8080
    # - filters:
    #     - type: URLRewrite
    #       urlRewrite:
    #         path:
    #           type: ReplacePrefixMatch
    #           replacePrefixMatch: /
