k8s/juicer/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juicer-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: local-ca-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: redirecttohttps@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dev-dankop.xyz
      secretName: local-ca-secret
  rules:
    - host: dev-dankop.xyz
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: juicer
                port:
                  name: juicer
          - path: /kratos(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kratos
                port:
                  name: kratos-public
